err/geotiler.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cytoolz'...
Listing './lib/python3.5/site-packages/cytoolz/curried'...
Listing './lib/python3.5/site-packages/cytoolz/tests'...
Listing './lib/python3.5/site-packages/cytoolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/geotiler'...
Compiling './lib/python3.5/site-packages/geotiler/cache.py'...
***   File "./lib/python3.5/site-packages/geotiler/cache.py", line 84
    yield t
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/geotiler/map.py'...
***   File "./lib/python3.5/site-packages/geotiler/map.py", line 396
    tiles = (t async for t in tiles)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geotiler/source'...
Listing './lib/python3.5/site-packages/geotiler/tests'...
Compiling './lib/python3.5/site-packages/geotiler/tests/test_cache.py'...
***   File "./lib/python3.5/site-packages/geotiler/tests/test_cache.py", line 50
    return [t async for t in tiles]
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geotiler/tests/test_tile_img.py'...
***   File "./lib/python3.5/site-packages/geotiler/tests/test_tile_img.py", line 59
    yield Tile(None, o, i, None)
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/geotiler/tests/test_tile_io.py'...
***   File "./lib/python3.5/site-packages/geotiler/tests/test_tile_io.py", line 122
    tiles = [t async for t in fetch_tiles(tiles, 2)]
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geotiler/tile'...
Compiling './lib/python3.5/site-packages/geotiler/tile/io.py'...
***   File "./lib/python3.5/site-packages/geotiler/tile/io.py", line 104
    yield tile
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/geotiler-0.13.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tlz'...
Listing './lib/python3.5/site-packages/toolz'...
Listing './lib/python3.5/site-packages/toolz/curried'...
Listing './lib/python3.5/site-packages/toolz/sandbox'...
Listing './lib/python3.5/site-packages/toolz/tests'...
Listing './lib/python3.5/site-packages/toolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
